cloud/postgrest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: pg-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: quay.io/spacetrain/postgrest:latest
          ports:
            - containerPort: 3000
            - containerPort: 3001
