cloud/postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest
spec:
  type: ClusterIP
  selector:
    app: postgrest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
